<resources>
    <string name="app_name">PruebaInventariosTres</string>
    <string name="capturarInventarios">Captura Inventarios</string>
    <string name="capturarInventario">Tomar Fotografía</string>
    <string name="Cantidad">Cantidad 0000</string>
    <string name="Precio">Precio Línea $ 00.00</string>
    <string name="text_button_enviar">Enviar</string>
    <string name="tab_inicio">inicio</string>
</resources>
